fixed layer slicing (required reverse cube orientation)
fixed cube scanning error if camera is off

now when turning via ui the system remembers the cube, you can confuse it and assemble it without mandatory input of the state